--- a/p1_QRcode/qr-code-component-main/index.html
+++ b/p1_QRcode/qr-code-component-main/index.html
@@ -11,72 +11,41 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
     <title>Frontend Mentor | QR code component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
         font-size: 11px;
-        text-align: center;
-        
+        text-align: center 
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-      html{
-        background-color: hsl(212, 45%, 89%);
-      }
-      .container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-      }
-      .item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: hsl(0, 0%, 100%);
-        width: 200px;
-        padding: 8px;
-      }
-      img {
-        image-rendering: pixelated;
-        width: 165px;
-        height: 165px;
-        border-radius: 5px;
-      }
     </style>
   </head>
   <body>
+    <main>
     <div class="container">
-      <div class="item">
-        <div>
+        <div class="item">
           <img src="images/image-qr-code.png" alt="qrcode image" />
-        </div>
-        <div>
-          <p>
-            <strong>Improve your front-end skills by building projects </strong
-            ><br />
+            <h3>Improve your front-end skills by building projects </h3>
+            <p>
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
           </p>
         </div>
       </div>
-    </div>
-
+    <footer>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
+  </footer>
+  </main>
   </body>
 </html>
