--- a/p1_QRcode/qr-code-component-main/index.html
+++ b/p1_QRcode/qr-code-component-main/index.html
@@ -42,8 +42,8 @@
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+        >Frontend Mentor</a>
+      >. Coded by <a href="#">Nuju Azenabor</a>.
     </div>
   </footer>
   </main>
